fixed the gap

--- a/styles.css
+++ b/styles.css
@@ -220,7 +220,7 @@ body{
   .pic-ctn > img {
     position: absolute;
     top: 0;
-    left: calc(50% - 100px);
+    left: calc(45% - 100px);
     opacity: 0;
     animation: display 10s infinite;
   }
